--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -1,7 +1,7 @@
 \documentclass[parskip=full,11pt,twoside]{scrartcl}
 \usepackage[utf8]{inputenc}
 
-\title{VIPER: Viper Interactive Prolog Education Runtime}
+\title{VIPER Interactive Prolog Education Runtime}
 \subtitle{Pflichtenheft}
 \author{Paul Brinkmeier, Lukas Brocke, Jannik Koch, Aaron Maier, Christian Oder}
 
