--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -68,7 +68,7 @@ Für eine Abfrage erhalten wir folgende Lösungen:
 
 \begin{lstlisting}
 ?- father(homer, bart).
-yes .
+yes
 ?- father(bart, abe).
 no .
 \end{lstlisting}
@@ -109,7 +109,7 @@ Unter Zuhilfenahme der Visualisierung soll der Nutzer die Interpretation eines P
 
 \criterium{Erstellen eines neuen Prolog-Programms}{crt:create}
 
-Das Programm stellt einen leeren Editor für neue Prolog-Programme bereit. Der Inhalt des Editors wird dabei gelöscht.
+Das Programm kann ein leeres Prolog-Programm anlegen. Der Inhalt des Editor wird dabei gelöscht.
 
 \criterium{Öffnen eines Prolog-Programms}{crt:open}
 
@@ -125,6 +125,7 @@ Das Programm kann Änderungen am momentan geladenen Prolog-Programm speichern. D
 
 \criterium{Parsen eines Prolog-Programms mit begrenztem Sprachumfang}{crt:parser}
 
+% TODO Teilmenge spezifizieren
 Das Programm kann eine Teilmenge der Sprache Prolog durch einen Parser verarbeiten.
 
 \criterium{Eingabe von Abfragen}{crt:request}
@@ -137,11 +138,11 @@ Das Programm bearbeitet Abfragen schrittweise. Nach jedem durchgeführten Teilsc
 
 \criterium{Visualisierung als Graph}{crt:visualization}
 
-Das Programm kann die Abarbeitung einer Abfrage zu einem Prolog-Programm durch einen Graphen visualisieren.
+Das Programm kann den aktuellen Zustand der Abarbeitung einer Abfrage zu einem Prolog-Programm durch einen Graphen visualisieren.
 
 \criterium{Ausgabe von Lösungen zu einer Abfrage}{crt:answer}
 
-Das Programm kann Lösungen zu einer Abfrage in der Konsole ausgeben. Dabei wird bei einer Abfrage ohne Variablen \enquote{\texttt{yes .}} oder \enquote{\texttt{no .}} ausgegeben. Beinhaltet die Abfrage Variablen, so werden mögliche Variablenbelegungen ausgegeben. Gibt es keine Lösung, so wird eine entsprechende Meldung ausgegeben.
+Das Programm kann Lösungen zu einer Abfrage in der Konsole ausgeben. Dabei wird bei einer Abfrage ohne Variablen \enquote{\texttt{yes}} oder \enquote{\texttt{no .}} ausgegeben. Beinhaltet die Abfrage Variablen, so werden mögliche Variablenbelegungen ausgegeben. Bei frei belegbaren Variablen wird \enquote{\texttt{yes}} ausgegeben. Gibt es keine Lösung, so wird eine entsprechende Meldung ausgegeben.
 
 \subsection{Kann}
 
@@ -151,7 +152,7 @@ Das Programm soll es dem Nutzer ermöglichen, beliebig viele Schritte schrittwei
 
 \criteriumOptional{Ausführung bis zur nächsten Lösung}{crt:continue}
 
-Die Interpretation soll durch eine zusätzliche Schaltfläche bis zur nächsten Lösung ausgeführt werden können. Diese Aktion kann durch das Betätigen der \enquote{Abbrechen}-Schaltfläche abgebrochen werden. Dabei wird der aktuelle Interpretationsschritt fertig berechnet und anschließend wird die Interpretation beendet.
+Die Interpretation soll durch eine zusätzliche Schaltfläche bis zur nächsten Lösung ausgeführt werden können. Diese Aktion kann durch das Betätigen der \enquote{Abbrechen}-Schaltfläche abgebrochen werden. Dabei wird der aktuelle Interpretationsschritt fertig berechnet und anschließend wird die Interpretation abgebrochen.
 
 \criteriumOptional{Cut}{crt:cut}
 
@@ -159,6 +160,7 @@ Das Programm soll die \enquote{Cut}-Funktionalität unterstützen.
 
 \criteriumOptional{Arithmetik}{crt:maths}
 
+% TODO Aus dem glosar definitionend hochziehen
 Das Programm soll grundlegende Arithmetik unterstützen.
 
 \criteriumOptional{Standardbibliothek}{crt:standardlib}
@@ -187,16 +189,18 @@ Das Programm soll Quelltext durch das Betätigen der \enquote{Formatieren}-Schal
 
 \criteriumOptional{Wechseln der Sprache zwischen Deutsch und Englisch}{crt:translation}
 
-Die Programmoberfläche soll die Sprachen Deutsch und Englisch unterstützen.
+Die Programmoberfläche soll die Sprachen Deutsch und Englisch unterstützen. Durch eine Schaltfläche ist es möglich, zwischen diesen zu wechseln.
 
 \criteriumOptional{Schnellzugriffsleiste}{crt:buttons}
 
-Das Programm soll eine Leiste mit Schaltflächen unter der Menüleiste besitzen.
+%TODO siehe GUI
+Das Programm soll, wie in den GUI Entwürfen eine Leiste mit Schaltflächen unter der Menüleiste besitzen.
 
 \subsection{Abgrenzung}
 
 \criteriumNot{Voller Sprachsupport}{crt:fullsupport}
 
+%TODO Verweiß auf Krieterium
 Das Programm unterstützt keine Prolog-Sprachfeatures außerhalb der vorgestellten Prolog-Teilmenge.
 
 \criteriumNot{Andere Programmiersprachen}{crt:otherlanguages}
@@ -205,7 +209,7 @@ Das Programm beschränkt sich auf die Prolog-Sprache und bietet keine offizielle
 
 \criteriumNot{Nutzung in einer Kommandozeile}{crt:cli}
 
-Das Programm beschränkt sich auf eine graphische Darstellung über GUI-Elemente. Eine Interaktion über die Kommandozeile wird nicht unterstützt.
+Das Programm beschränkt sich auf eine grafische Darstellung über GUI-Elemente. Eine Interaktion über die Kommandozeile wird nicht unterstützt.
 
 \criteriumNot{Professionelle Anwendung}{crt:professionaluse}
 
@@ -217,7 +221,7 @@ Der Parser ist gegeben und wird nicht selbst implementiert.
 
 \section{Produkteinsatz}
 
-Das Programm soll als graphisches Prolog-Lerntool betrieben werden.
+Das Programm soll als grafisches Prolog-Lerntool betrieben werden.
 
 Die Zielgruppe des Lerntools sind Lehrende, Studierende und Enthusiasten.
 
@@ -229,7 +233,7 @@ Das Programm ermöglicht es mit Hilfe eines eingebauten Editors Prolog-Programme
 
 \section{Produktumgebung}
 
-Das Programm soll als graphische Applikation auf einem Desktop-System betrieben werden.
+Das Programm soll als grafische Applikation auf einem Desktop-System betrieben werden.
 
 Es stehen mindestens 2 AMD64/x86 Kerne mit insgesamt 2GB shared RAM zur Verfügung.
 
@@ -248,15 +252,14 @@ Die Pfade der fünf zuletzt geöffneten Dateien werden für einen Eintrag in der
 Die letzte vom Nutzer ausgewählte GUI-Sprache wird gespeichert, damit diese nach einem Programm-Neustart nicht erneut eingestellt werden muss.
 
 \textbf{Standardbibliothek} \\
-Der Status der Standardbibliothek (``Aktiviert''/``Deaktiviert'') wird gespeichert, damit diese Einstellung nach einem Programm-Neustart erhalten bleibt.
-
-Außer den oben genannten werden keinerlei Daten gespeichert.
+Der Status der Standardbibliothek (\enquote{Aktiviert}/\enquote{Deaktiviert}) wird gespeichert, damit diese Einstellung nach einem Programm-Neustart erhalten bleibt.
 
 \section{Funktionale Anforderungen}
 
 \functionality{Erstellen eines neuen Prolog-Programms}{fnc:new}
 \fulfills{crt:create}
 
+%TODO Verweiß auf speichern
 Das Programm stellt einen leeren Editor bereit, in dem ein neues Prolog-Programm angelegt werden kann. Sollte der Editor zuvor bereits ungesicherten Inhalt besitzen, so wird der Nutzer aufgefordert, diesen zu speichern. Hierbei kann entweder die alte Datei überschrieben oder eine neue Datei angelegt werden. Der alte Editor-Inhalt, der Konsolen-Inhalt und die Visualisierung werden daraufhin verworfen. 
 
 \functionality{Öffnen eines Prolog-Programms}{fnc:open}
@@ -277,7 +280,7 @@ Das Prolog-Programm kann im Editor bearbeitet werden. Die Änderungen werden ers
 \functionality{Speichern als}{fnc:saveas}
 \fulfills{crt:save}
 
-Ist der Dateiname noch nicht durch das Öffnen eines bereits vorhandenen Prolog-Programms oder durch vorheriges Speichern bekannt, so kann über einen Auswahldialog eine neue Datei angelegt werden.
+Beim Betätigen der \enquote{Speichern als} so kann über einen Auswahldialog eine neue Datei angelegt werden.
 
 \functionality{Speichern des Editor-Inhalts}{fnc:save}
 \fulfills{crt:save}
@@ -334,12 +337,13 @@ Gab es eine erfolgreiche Unifikation, so wird diese mit den entsprechenden Subst
 \functionality{Visualisierung einer fehlgeschlagenen Unifikation}{fnc:unificationfail}
 \fulfills{crt:visualization}
 
-Fehlgeschlagene Unifikationen werden nur visualisiert, wenn die Funktorköpfe identisch sind. Der Grund, warum die Unifikation fehlgeschlagen ist, wird zusätzlich in einer Meldung ausgegeben. Da die Unifikation bei unterschiedlichen Funktorköpfen automatisch fehlschlägt, werden diese übersprungen und nicht visualisiert.
+Fehlgeschlagene Unifikationen werden visualisiert, jedoch nur, wenn die Funktorköpfe identisch sind. Da die Unifikation bei unterschiedlichen Funktorköpfen automatisch fehlschlägt, werden diese übersprungen und nicht visualisiert.
 
 \functionality{Visualisierung von Backtracking}{fnc:backtracking}
 \fulfills{crt:visualization}
 
-Wenn für ein Teilziel keine Unifikation mehr möglich ist, so wird zum vorherigen Teilziel oder, im Falle des ersten Teilziels, zur übergeordneten Regel zurückgesprungen. Dieser Backtrackingschritt wird entsprechend in der Visualisierung angezeigt.
+%TODO Verlinken
+Ein Backtrackingschritt wird entsprechend in der Visualisierung angezeigt.
 
 \functionality{Vergrößern und Verkleinern der Visualisierung durch Schaltflächen oder das Mausrad}{fnc:zoom}
 \fulfills{crt:visualization}
@@ -369,12 +373,13 @@ Im Falle einer Interpretation, die mehrere Schritte hintereinander ausführt (Fo
 \functionality{Cut}{fnc:cut}
 \fulfills{crt:cut}
 
-Die Cut-Funktionalität soll durch das Hinzufügen eines \enquote{\texttt{!}} als Teilziel einer Regel unterstützt werden.
+Die Cut-Funktionalität soll unterstützt werden.
 
 \functionality{Arithmetik}{fnc:maths}
 \fulfills{crt:maths}
 
-Das Programm soll grundlegende Arithmetik unterstützen.
+%TODO Link K4
+Das Programm soll die in K4 beschriebene, grundlegende, Arithmetik unterstützen.
 
 \functionality{Exportieren der angezeigten Visualisierung in einem beliebigen Schritt als LaTeX-Dokument}{fnc:latexexport}
 \fulfills{crt:latexexport}
@@ -394,7 +399,7 @@ Die Einbindung der Standardbibliothek kann über die Menüleiste aktiviert und d
 \functionality{Formatierung des Quellcodes}{fnc:formatter}
 \fulfills{crt:formatting}
 
-Eine automatische Formatierung von Prolog-Quellcode ist über die Menüleiste möglich. Die Formatierung ist hierbei vorgegeben und kann nicht verändert werden. Schlägt die Formatierung fehl, so wird eine Fehlermeldung ausgegeben.
+Eine automatische Formatierung von korrektem Prolog-Quellcode ist über die Menüleiste möglich. Die Formatierung ist hierbei vorgegeben und kann nicht verändert werden. Schlägt die Formatierung fehl, so wird eine Fehlermeldung ausgegeben.
 
 \functionality{Wechsel der verwendeten Sprache}{fnc:translation}
 \fulfills{crt:translation}
@@ -457,6 +462,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 {Der Nutzer betätigt die Öffnen-Schaltfläche.}
 {Die Datei wird im Editor-Fenster geöffnet.}
 
+%TODO Kürz mich
 \test{Öffnen einer Prolog-Programmdatei während im Editor bereits ein Programm eingegeben wurde mit Speichern des geschriebenen Programmes}{tst:openanother}
 \tests{fnc:open}
 
@@ -476,10 +482,11 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 {Der Nutzer wählt einen Speicherort und wählt einen Dateinamen. Anschließend betätigt er die Speichern-Schaltfläche.}
 {Das im Editor geöffnete Prolog-Programm wird in die gewählte Datei gespeichert. Die zu öffnende Datei wird in den Editor geladen und überschreibt den bisherigen Inhalt.}
 
+%TODO Kürz mich
 \test{Öffnen einer Prolog-Programmdatei während im Editor bereits ein Prolog-Programm eingegeben wurde mit Verwerfen des geschriebenen Prolog-Programmes}{tst:openanother2}
 \tests{fnc:open}
 
-\teststep{Das Programm wird ausgeführt und ist fokussiert. Im Editor wurde ein Prolog-Programm händisch eingegeben.}
+\teststep{Das Programm wird ausgeführt. Im Editor wurde ein Prolog-Programm von Hand eingegeben.}
 {Der Nutzer wählt über die Menüleiste die Öffnen-Funktion aus.}
 {Ein Datei-Auswahldialog öffnet sich.}
 
@@ -494,7 +501,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 \test{Speichern eines im Editor geschrieben Prolog-Programmes}{tst:save}
 \tests{fnc:save}
 
-\teststep{Das Programm wird ausgeführt und ist fokussiert. Ein Prolog-Programm ist im Editor geöffnet.}
+\teststep{Das Programm wird ausgeführt. Ein Prolog-Programm ist im Editor von Hand eingegeben.}
 {Der Nutzer wählt über die Menüleiste die Speichern-Funktion aus.}
 {Ein Datei-Speichern-Dialog öffnet sich.}
 
@@ -505,14 +512,14 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 \test{Inkorrektes Prolog-Programm}{tst:errorcheck}
 \tests{fnc:errorcheck}
 
-\teststep{Der Nutzer hat das inkorrektes Prolog-Programm \texttt{father.} in den Editor eingetragen.}
+\teststep{Der Nutzer hat das Prolog-Programm \texttt{father(} in den Editor eingetragen.}
 {Der Nutzer betätigt die Parsen-Schaltfläche in der Menüleiste, um das Prolog-Programm zu parsen.}
-{Die Ausführung wird abgebrochen. Eine verständliche Fehlermeldung (``Syntax-Fehler in Zeile 1'') wird in der Konsole angezeigt.}
+{Die Ausführung wird abgebrochen. Eine verständliche Fehlermeldung \enquote{Syntax-Fehler in Zeile 1} wird in der Konsole angezeigt.}
 
 \test{Interpretierung vom simpsons.pl-Programm}{tst:simpsons}
 \tests{fnc:interpreter}
 
-\teststep{Das \texttt{simpsons.pl}-Programm ist im Editorfenster eingegeben oder aus einer Datei geöffnet worden.}
+\teststep{Das \texttt{simpsons.pl}-Programm ist im Editorfenster eingegeben worden.}
 {Der Nutzer betätigt die Parsen-Schaltfläche des Hauptfensters.}
 {Das Prolog-Programm wird erfolgreich geparst, es kommt zu keinen Fehlern. In das Eingabefeld kann eine Abfrage eingegeben werden.}
 
@@ -616,7 +623,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\test{Export als Bilddatei für Foliensätze}{tst:latexexport}
+\test{Export als Bilddatei}{tst:latexexport}
 \tests{fnc:imageexport}
 
 \teststep{Das Beispielprogramm ist im Editor geöffnet und der unten gezeigte Zustand wurde erreicht und visualisiert.}
@@ -643,7 +650,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 
 \teststep{Das \texttt{simpsons.pl}-Beispielprogramm ist im Editor eingegeben und durch den Parser verarbeitet worden. Der Nutzer hat die Abfrage \texttt{father(homer, X)} eingegeben und die Wurzel des Visualisierungsgraphen wird angezeigt.}
 {Der Nutzer betätigt die Schaltfläche \enquote{Nächster Schritt}.}
-{Eine fehlgeschlagene Unifikation mit \texttt{father(abe, homer)} entsprechend der gezeigten Graphik wird angezeigt.}
+{Eine fehlgeschlagene Unifikation mit \texttt{father(abe, homer)} entsprechend der gezeigten Grafik wird angezeigt.}
 
 \begin{minipage}{\linewidth}
 \makebox[\linewidth]{
@@ -657,7 +664,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 
 \teststep{Das \texttt{simpsons.pl}-Beispielprogramm ist im Editor eingegeben und durch den Parser verarbeitet worden. Der Nutzer hat die Abfrage \texttt{father(homer, X)} eingegeben und die Wurzel des Visualisierungsgraphen wird angezeigt.}
 {Der Nutzer betätigt die Schaltfläche \enquote{Nächster Schritt} zwei mal.}
-{Eine erfolgreiche Unifikation mit \texttt{father(homer, bart)} entsprechend der gezeigten Graphik wird angezeigt.}
+{Eine erfolgreiche Unifikation mit \texttt{father(homer, bart)} entsprechend der gezeigten Grafik wird angezeigt.}
 
 \begin{minipage}{\linewidth}
 \makebox[\linewidth]{
@@ -744,7 +751,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 
 \teststep{Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
 {Der Nutzer betätigt die Schritt-Schaltfläche bis eine Lösung gefunden wird.}
-{Eine Lösung wurde gefunden. Es wird \texttt{yes.} in der Konsole ausgegeben.}
+{Eine Lösung wurde gefunden. Es wird \texttt{yes} in der Konsole ausgegeben.}
 
 \test{Öffnen eines zuletzt verwendeten Prolog-Programms, Parsen und Interpretieren einer Abfrage, Ausführung bis zur nächsten Ausgabe und Abbruch}{tst:sys3}
 \tests{fnc:recentfiles}
@@ -846,7 +853,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 
 \teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen und gespeichert.}
 {Der Nutzer betätigt die Parsen-Schaltfläche der Schnellzugriffsleiste.}
-{Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Das Eingabefeld wird freigegeben und fokusiert.}
+{Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Das Eingabefeld wird freigegeben.}
 
 \teststep{Das Prolog-Programm wurde erfolgreich geparst.}
 {Der Nutzer gibt im Eingabefeld \texttt{father(homer, X).} ein und bestätigt mit der Eingabe-Taste.}
@@ -877,7 +884,7 @@ Die folgenden Entwürfe beinhalten alle Musskriterien.
 \end{minipage}
 
 Das Hauptfenster besteht aus der Fensterleiste (A), der Menüleiste (1), dem Editor (2), der Visualisierungsbox (3), der Konsole (4) und dem Eingabefeld (5).
-Dabei ist die Fensterleiste kein Bestandteil des Programms; sie ist von der graphischen Oberfläche des Betriebssystems vorgegeben.
+Dabei ist die Fensterleiste kein Bestandteil des Programms; sie ist von der grafischen Oberfläche des Betriebssystems vorgegeben.
 Das Eingabefeld ist deaktiviert (angedeutet durch die graue Färbung), da noch kein Prolog-Programm geparst wurde.
 
 \subsubsection{\enquote{Datei}-Menü}
@@ -1043,8 +1050,8 @@ Betätigt der Nutzer die Schaltfläche erneut, wird der Interpreter nach der akt
 \end{minipage}
 
 Die Schaltflächen \enquote{Exportieren als Bild} und \enquote{Exportieren als TikZ} erlauben dem Nutzer das Exportieren des Visualisierungsgraphen in verschiedenen Formaten (1).
-\enquote{Exportieren als Bild} lässt den Nutzer zwischen dem Export als SVG- oder PNG-Graphik wählen.
-\enquote{Exportieren als TikZ} lässt den Nutzer eine TeX-Datei mit einer Umsetzung des Graphen als TikZ-Graphik erstellen.
+\enquote{Exportieren als Bild} lässt den Nutzer zwischen dem Export als SVG- oder PNG-Grafik wählen.
+\enquote{Exportieren als TikZ} lässt den Nutzer eine TeX-Datei mit einer Umsetzung des Graphen als TikZ-Grafik erstellen.
 
 \subsubsection{Formatieren eines Prolog-Programms}
 
@@ -1093,7 +1100,7 @@ Der Eintrag \enquote{Sprache} (2) lässt den Nutzer die Sprache der GUI ändern.
 
 \subsection{Visualisierung}
 
-Um die Visualisierungsbeispiele besser darzustellen zu können, wurden sie hier ohne die graphische Oberfläche des Programms eingefügt.
+Um die Visualisierungsbeispiele besser darzustellen zu können, wurden sie hier ohne die grafische Oberfläche des Programms eingefügt.
 Die visualisierte Abfrage ist \texttt{grandfather(X, Y)} im Beispielprogramm.
 
 \subsubsection{Wurzel}
@@ -1226,13 +1233,14 @@ Ziel, für das alle möglichen Lösungen gefunden werden sollen. Die Lösung kan
 
 \textbf{Arithmetik}:
 Grundlegende Arithmetik beinhaltet natürliche Zahlen inklusive der 0. Des weiteren werden folgende Operatoren unterstützt:\\
-\texttt{+, -, *, <, =<, >, >=, =\=, =:=}\\
+\texttt{+, -, *, <, =<, >, >=, =\textbackslash=, =:=}\\
 \\
 Da Termgleichheit in Prolog keine Arithmetik unterstützt, können Abfragen wie\\
 \enquote{$4 = 1 + 3$}\\
 nicht ausgewertet werden. Deshalb wird zusätzlicher der \texttt{is}-Operator unterstützt. Dieser evaluiert zuerst die rechte Seite arithmetisch und unifiziert diese anschließend mit der Linken.
 
-\textbf{Backtracking / Rückschreiten}:
+\textbf{Backtracking}:
+%TODO GUI Beheben
 Ist für ein Ziel keine Unifikation mehr möglich, muss der Interpreter versuchen, vorhergehende Teilziele anders zu unifizieren oder, falls es keine vorhergehenden Teilziele gibt, eine andere Unifikation für die übergeordnete Regel zu finden.
 Diesen Prozess nennt man \enquote{Backtracking}.
 
@@ -1277,7 +1285,7 @@ Vorgegebene Fakten und Regeln, welche automatisch bei der Verarbeitung durch den
 Sammelbegriff für Funktoren, Variablen und Zahlen.
 
 \textbf{Unifikation}:
-Zwei Terme sind genau dann unifizierbar, wenn sie gleich sind oder Variablen enthalten, die so belegt werden können dass die Terme gleich sind.
+Zwei Terme sind genau dann unifizierbar, wenn sie gleich sind oder Variablen enthalten, die so belegt werden können, dass die Terme gleich sind.
 
 \textbf{Variable}:
 Platzhalter. Erlaubt das allgemeine Beschreiben von Regeln. Können für einen beliebigen Term stehen.
@@ -1296,10 +1304,10 @@ Schritte zwischen zwei Zuständen.
 Fenster zur Meldung einer Nachricht (Warnungs- oder Fehler-Dialog) oder Anfrage (bspw. Bestätigungs-Dialog).
 
 \textbf{Editor}:
-Element der graphischen Oberfläche, welches Eingabe und Bearbeitung von angezeigtem Text ermöglicht.
+Element der grafischen Oberfläche, welches Eingabe und Bearbeitung von angezeigtem Text ermöglicht.
 
 \textbf{Eingabefeld}:
-Element der graphischen Oberfläche. Das Eingabefeld dient zur Eingabe von Abfragen. Es ist nur dann aktiviert, wenn ein korrektes Prolog-Programm eingegeben und geparst wurde.
+Element der grafischen Oberfläche. Das Eingabefeld dient zur Eingabe von Abfragen. Es ist nur dann aktiviert, wenn ein korrektes Prolog-Programm eingegeben und geparst wurde.
 
 \textbf{Export}:
 Schreiben von Bild-Dateien oder LaTeX-Quellcode in ein Zielverzeichnis auf einem verbundenen Speichermedium. Das Schreiben von Prolog-Programmen auf ein Speichermedium wird nicht als Export, sondern als Speichern bezeichnet.
@@ -1311,13 +1319,13 @@ Vorgegebener Stil bzgl. der Setzung von Leerzeichen und Umbrüchen. Zu untersche
 Struktur bestehend aus Knoten und Kanten.
 
 \textbf{GUI / GUI-Element}:
-Die GUI entspricht der graphischen Benutzeroberfläche (graphical user interface). Das GUI ist zusammengesetzt aus diversen GUI-Elementen innerhalb eines Fensters (bspw. dem Editor).
+Die GUI entspricht der grafischen Benutzeroberfläche (graphical user interface). Das GUI ist zusammengesetzt aus diversen GUI-Elementen innerhalb eines Fensters (bspw. dem Editor).
 
 \textbf{Konsole}:
-Element der graphischen Oberfläche. Die Konsole ist nur lesbar und dient der Ausgabe von Lösungen einer Abfrage sowie anderen Meldungen. 
+Element der grafischen Oberfläche. Die Konsole ist nur lesbar und dient der Ausgabe von Lösungen einer Abfrage sowie anderen Meldungen. 
 
 \textbf{Menüleiste}:
-Element der graphischen Oberfläche. Bietet über Text-Menüs Zugriff auf Funktionen wie Speichern und Öffnen.
+Element der grafischen Oberfläche. Bietet über Text-Menüs Zugriff auf Funktionen wie Speichern und Öffnen.
 
 \textbf{Öffnen}:
 Lesen eines ausgewählten Prolog-Programms von einem verbundenen Speichermedium in das Programm. Dies entspricht der Übertragung des Textes aus der gewählten Datei in den Editor.
